<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:accountitem="http://schemas.android.com/apk/res/com.extensivepro.mxl"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <!-- android:background="@drawable/body_bg_colour_02"> -->

    <ScrollView
        android:id="@+id/body_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/guide_bar_btn_height"
        	android:paddingTop="@dimen/title_bar_height" 
        	>

            <TextView
                android:id="@+id/cur_account"
                style="@style/account_info_txt_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp" 
                android:text="@string/cur_account_txt" />

            <TextView
                android:id="@+id/available_balance"
                style="@style/account_info_txt_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_balance_txt" />

            <com.extensivepro.mxl.widget.AccountItem
                android:id="@+id/order_state"
                android:layout_width="match_parent"
			    android:layout_height="@dimen/acount_item_height"
			    android:layout_margin="@dimen/acount_item_margin"
                accountitem:text="@string/order_state_txt"
                android:clickable="true"
                android:background="@drawable/account_item_normal_selector"
                android:gravity="center"/>
            <com.extensivepro.mxl.widget.AccountItem
                android:id="@+id/delivery_address"
                android:layout_width="match_parent"
			    android:layout_height="@dimen/acount_item_height"
			    android:layout_margin="@dimen/acount_item_margin"
                accountitem:text="@string/delivery_address_txt"
                android:clickable="true"
                android:background="@drawable/account_item_normal_selector"
                android:gravity="center"/>
            <com.extensivepro.mxl.widget.AccountItem
                android:id="@+id/account_recharge"
                android:layout_width="match_parent"
			    android:layout_height="@dimen/acount_item_height"
			    android:layout_margin="@dimen/acount_item_margin"
                accountitem:text="@string/account_recharge_txt"
                android:clickable="true"
                android:background="@drawable/account_item_normal_selector"
                android:gravity="center"/>
            <com.extensivepro.mxl.widget.AccountItem
                android:id="@+id/notify_msg"
                android:layout_width="match_parent"
			    android:layout_height="@dimen/acount_item_height"
			    android:layout_margin="@dimen/acount_item_margin"
                accountitem:text="@string/notify_msg_txt"
                android:clickable="true"
                android:background="@drawable/account_item_normal_selector"
                android:gravity="center"/>
            <com.extensivepro.mxl.widget.AccountItem
                android:id="@+id/about_mxl_app"
                android:layout_width="match_parent"
			    android:layout_height="@dimen/acount_item_height"
			    android:layout_marginTop="@dimen/acount_item_margin"
			    android:layout_marginLeft="@dimen/acount_item_margin"
			    android:layout_marginRight="@dimen/acount_item_margin"
                accountitem:text="@string/about_mxl_app_txt"
                android:clickable="true"
                android:background="@drawable/account_item_top_selector"
                android:gravity="center"/>
            <com.extensivepro.mxl.widget.AccountItem
                android:id="@+id/scroe_me"
                android:layout_width="match_parent"
			    android:layout_height="@dimen/acount_item_height"
			    android:layout_marginLeft="@dimen/acount_item_margin"
			    android:layout_marginRight="@dimen/acount_item_margin"
			    android:clickable="true"
                accountitem:text="@string/score_me_txt"
                android:background="@drawable/account_item_center_selector"
                android:gravity="center"/>
            <com.extensivepro.mxl.widget.AccountItem
                android:id="@+id/feedback_me"
                android:layout_width="match_parent"
			    android:layout_height="@dimen/acount_item_height"
			    android:layout_marginBottom="@dimen/acount_item_margin"
			    android:layout_marginLeft="@dimen/acount_item_margin"
			    android:layout_marginRight="@dimen/acount_item_margin"
			    android:clickable="true"
                accountitem:text="@string/feedback_me_txt"
                android:background="@drawable/account_item_bottom_selector"
                android:gravity="center"/>

			<TextView
			    android:id="@+id/logout_btn"
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/acount_item_height"
			    android:layout_marginBottom="@dimen/acount_item_margin"
			    android:layout_marginLeft="@dimen/acount_item_margin"
			    android:layout_marginRight="@dimen/acount_item_margin"
			    android:background="@drawable/pay_btn_seletor"
			    android:text="@string/logout_btn_txt"
			    android:textColor="@color/white"
			    android:gravity="center"
			    android:clickable="true"
			    android:textSize="@dimen/account_logout_btn_txt_size" />
			<TextView 
	            android:id="@+id/hide_margin"
	            android:layout_width="fill_parent"
	            android:layout_height="@dimen/guide_bar_btn_height"/>

        </LinearLayout>
    </ScrollView>
    <!-- title bar -->

    <com.extensivepro.mxl.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" />

</FrameLayout>