<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fillViewport="true">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	
	    <ImageView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/welcome"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="30dp"
	        />
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/welcome_use_app"
	        android:textColor="@color/welcome_use_app_txt_color"
	        android:textSize="@dimen/welcome_use_app_txt_size"
	        android:layout_marginTop="15dp"
	        android:layout_marginBottom="10dp"
	        />
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="@drawable/login_areg_bg"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" 
	        android:paddingLeft="@dimen/login_input_area_margin_left_right"
	         android:paddingRight="@dimen/login_input_area_margin_left_right">
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="horizontal" 
	            android:background="@drawable/login_edit_bg"
	            android:layout_marginTop="@dimen/login_edit_margin_top">
	
	            <TextView
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/prefix_account" 
	                style="@style/login_prefix_txt_style"/>
	
	            <EditText
	                android:id="@+id/account_edit"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="7"
	                android:hint="@string/type_email" 
	                android:background="@null"
	                style="@style/login_hit_txt_style"
	                android:singleLine="true"/>
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="horizontal"
	            android:background="@drawable/login_edit_bg" 
	            android:layout_marginTop="@dimen/login_edit_margin_top">
	
	            <TextView
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/prefix_passwd" 
	                style="@style/login_prefix_txt_style"/>
	
	            <EditText
	                android:id="@+id/passwd_edit"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="7"
	                android:hint="@string/type_passwd"
	                android:background="@null" 
	                style="@style/login_hit_txt_style"
	                android:password="true"
	                android:singleLine="true"/>
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="horizontal"
	             android:layout_marginTop="@dimen/login_edit_margin_top">
		        <CheckBox
		            android:id="@+id/remember_passwd"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:button="@drawable/remember_passwd_chk_selector"
		            android:gravity="center" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:gravity="center"
		            android:paddingLeft="3dp"
		            android:text="@string/remember_passwd"
		            android:textColor="@color/remember_passwd_txt_color"
		            android:textSize="@dimen/remember_passwd_txt_size" />
	        </LinearLayout>
	
	        <FrameLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="horizontal"
	            android:layout_marginTop="@dimen/login_edit_margin_top"
	            android:layout_marginBottom="@dimen/login_edit_margin_top" >
	
	            <TextView
	                android:id="@+id/register"
	                android:layout_width="@dimen/login_btn_width"
                    android:layout_height="@dimen/login_btn_height"
	                android:layout_gravity="left"
	                android:text="@string/register" 
	                android:background="@drawable/register_btn_selector" 
	                style="@style/login_reg_btn_txt_style"/>
	
	            <TextView
	                android:id="@+id/login"
	                android:layout_width="@dimen/login_btn_width"
                    android:layout_height="@dimen/login_btn_height"
	                android:layout_gravity="right"
	                android:text="@string/login" 
	                android:background="@drawable/login_btn_selector"
	                style="@style/login_reg_btn_txt_style"/>
	        </FrameLayout>
	    </LinearLayout>
	
	    <!-- forgot password -->
	
	    <TextView
	        android:id="@+id/forgot_passwd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:text="@string/forgot_passwd_info" 
	        android:clickable="true"
	        android:background="@drawable/forget_passwd_bg_selector"
	        android:layout_marginTop="@dimen/login_edit_margin_top"
	        android:textColor="@color/forget_passwd_txt_color"
	        android:textSize="@dimen/login_common_txt_size"
	        android:textStyle="bold"/>
	
	    <!-- copy right -->
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:orientation="vertical" 
	        android:layout_marginTop="@dimen/copy_right_margin_top"
	        android:layout_marginBottom="@dimen/copy_right_margin_bottom">

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text="@string/copy_right_cn" 
	            style="@style/copy_right_txt_style"/>

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text="@string/copy_right_en" 
	            style="@style/copy_right_txt_style"/>

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text="@string/copy_right_baseline" 
	            style="@style/copy_right_txt_style"/>

	    </LinearLayout>
		<TextView 
            android:id="@+id/hide_margin"
            android:layout_width="fill_parent"
            android:layout_height="80dp"/>
	</LinearLayout>

</ScrollView>
